include/pr/physics/physics-dll.h

	enum class EStructId : std::int32_t
	{
		EngineConfig = 1,
		ShapeCommon = 2,
		SphereShape = 3,
		BoxShape = 4,
		LineShape = 5,
		TriangleShape = 6,
		BodyDesc = 7,
		BodyState = 8,
		BodyCommand = 9,
		BodySnapshot = 10,
		Event = 11,
		Diagnostics = 12,
		Material = 13,
		ArticulationDesc = 14,
		ArticulationLink = 15,
		ArticulationJoint = 16,
		ArticulationState = 17,
		ArticulationLinkState = 18,
		D6Constraint = 19,
		Terrain = 20,
		CylindricalBoundary = 21,
	};
	// Selects the dynamics owner addressed by a persistent constraint endpoint.
	enum class EConstraintEndpoint : std::int32_t
	{
		World = 0,
		RigidBody = 1,
		ArticulationLink = 2,
	};
	struct StructHeader
	{
		std::uint32_t size;
		std::uint32_t version;
	};
	struct Vector4
	{
		float x;
		float y;
		float z;
		float w;
	};
	struct Matrix4
	{
		Vector4 x;
		Vector4 y;
		Vector4 z;
		Vector4 w;
	};
	struct SpatialVector
	{
		Vector4 angular;
		Vector4 linear;
	};
	struct ShapeCommon
	{
		StructHeader header;
		Matrix4 shape_to_root;
		std::int32_t material_id;
		std::uint32_t flags;
	};
	struct SphereShape
	{
		ShapeCommon common;
		float radius;
		std::int32_t hollow;
	};
	struct BoxShape
	{
		ShapeCommon common;
		Vector4 dimensions;
	};
	struct LineShape
	{
		ShapeCommon common;
		float length;
		float radius;
	};
	struct TriangleShape
	{
		ShapeCommon common;
		Vector4 a;
		Vector4 b;
		Vector4 c;
	};
	struct BodyDesc
	{
		StructHeader header;
		ShapeHandle shape;
		Matrix4 object_to_world;
		InertiaProperties inertia;
		SpatialVector momentum;
		Vector4 gravity;
		std::uint64_t user_tag;
		EMotionType motion_type;
		EMassMode mass_mode;
		float mass_or_density;
		EBodyFlags flags;
	};
	struct BodyState
	{
		StructHeader header;
		BodyHandle body;
		ShapeHandle shape;
		Matrix4 object_to_world;
		InertiaProperties inertia;
		SpatialVector momentum;
		SpatialVector velocity;
		SpatialVector force;
		Vector4 gravity;
		std::uint64_t user_tag;
		EMotionType motion_type;
		EBodyFlags flags;
	};
	struct BodyCommand
	{
		StructHeader header;
		BodyHandle body;
		ECommand type;
		std::uint32_t flags;
		Matrix4 transform;
		SpatialVector value;
		Vector4 at;
	};
	struct BodySnapshot
	{
		StructHeader header;
		BodyHandle body;
		ShapeHandle shape;
		Matrix4 object_to_world;
		SpatialVector momentum;
		SpatialVector velocity;
		std::uint64_t user_tag;
		EMotionType motion_type;
		EBodyFlags flags;
	};
	// Immutable articulation topology metadata supplied with ordered link and joint arrays.
	struct ArticulationDesc
	{
		StructHeader header;
		Matrix4 root_to_world;
		SpatialVector root_velocity;
		std::uint64_t user_tag;
		std::uint32_t link_count;
		EArticulationRoot root_type;
		EArticulationFlags flags;
		std::uint32_t reserved;
	};
	// Immutable mass, shape, parent, and collision policy for one topologically ordered articulation link.
	struct ArticulationLinkProperties
	{
		StructHeader header;
		ShapeHandle shape;
		InertiaProperties inertia;
		Matrix4 shape_to_link;
		std::int32_t parent_index;
		EArticulationLinkFlags flags;
	};
	// Immutable reduced-coordinate joint joining ordered link i+1 to its earlier parent link.
	struct ArticulationJointProperties
	{
		StructHeader header;
		Matrix4 joint_to_parent;
		Matrix4 joint_to_child;
		Vector4 axes[6];
		float initial_positions[6];
		float initial_velocities[6];
		EArticulationAxis axis_types[6];
		std::uint32_t dof_count;
		std::uint32_t reserved;
	};
	// Whole-tree mutable state plus the dimensions of the flattened non-root joint arrays.
	struct ArticulationState
	{
		StructHeader header;
		ArticulationHandle articulation;
		Matrix4 root_to_world;
		SpatialVector root_velocity;
		SpatialVector root_force;
		std::uint64_t user_tag;
		std::uint32_t link_count;
		std::uint32_t joint_dof_count;
		EArticulationFlags flags;
		std::uint32_t reserved;
	};
	// Current state and persistent external fields for one topologically indexed articulation link.
	struct ArticulationLinkState
	{
		StructHeader header;
		ArticulationHandle articulation;
		std::uint32_t link_index;
		std::int32_t parent_index;
		ShapeHandle shape;
		Matrix4 link_to_world;
		SpatialVector velocity;
		SpatialVector acceleration;
		SpatialVector external_force;
		Vector4 gravity;
	};
	// Completed contact geometry and lifecycle diagnostics. WorldContact has exactly one zero body handle for the
	// engine-owned terrain/boundary endpoint; Contact has two caller-owned handles. Normals point from A towards B.
	struct Event
	{
		StructHeader header;
		EEvent type;
		std::uint32_t point_count;
		BodyHandle body_a;
		BodyHandle body_b;
		Vector4 normal;
		Vector4 points[4];
		float depth;
		std::int32_t material_a;
		std::int32_t material_b;

		// Identify which child of a compound shape produced the contact, in the declaration order the compound
		// was built with, so a caller can attribute a contact to a specific part rather than only to a material.
		// A body whose shape is a primitive root has no child identity and reports PHYSICS_NO_CHILD, as do
		// events that are not contacts.
		std::uint32_t child_a;
		std::uint32_t child_b;
		PersistentConstraintHandle constraint;
		float break_force;
		float break_torque;
		std::int32_t substep_index;
		std::uint32_t reserved;
		std::uint32_t failure_flags;
		std::int32_t failure_phase;
		std::int32_t failure_island_index;
		std::int32_t failure_iteration_count;
		float failure_relaxation;
		float failure_merit_change;
	};
	struct Diagnostics
	{
		StructHeader header;
		StepProfile profile;
		std::uint64_t submitted_step;
		std::uint64_t completed_step;
		std::uint64_t state_checksum;
		std::int32_t body_count;
		std::int32_t shape_count;
		std::int32_t pair_count;
		std::int32_t contact_count;
		std::int32_t max_pairs;
		std::int32_t max_contacts;
		std::int32_t collision_event_count;
		std::int32_t collision_event_capacity;
		std::int32_t collision_event_overflow_substep;
		std::int32_t step_pending;
		std::int32_t device_removed_reason;
		std::int32_t articulation_count;
		std::int32_t constraint_count;
		ConstraintFeatureDiagnostics constraints;
		ArticulationFeatureDiagnostics articulations;
		CoupledFeatureDiagnostics coupled;
		FrameOutputFeatureDiagnostics frame_output;
		StepFailureDiagnostics failure;
	};
	// Reduced-coordinate articulation creation, lifetime, state, and external fields.
	PHYSICS_API pr::physics::EStatus __stdcall Physics_ArticulationCreate(pr::physics::EngineHandle engine, pr::physics::ArticulationDesc const* desc, pr::physics::ArticulationLinkProperties const* links, pr::physics::ArticulationJointProperties const* joints, pr::physics::ArticulationHandle* articulation);
	PHYSICS_API pr::physics::EStatus __stdcall Physics_ArticulationDestroy(pr::physics::EngineHandle engine, pr::physics::ArticulationHandle articulation);
	PHYSICS_API pr::physics::EStatus __stdcall Physics_ArticulationStateGet(pr::physics::EngineHandle engine, pr::physics::ArticulationHandle articulation, pr::physics::ArticulationState* state, float* positions, float* velocities, float* accelerations, float* forces, std::uint32_t scalar_capacity, std::uint32_t* scalar_required);
	PHYSICS_API pr::physics::EStatus __stdcall Physics_ArticulationStateSet(pr::physics::EngineHandle engine, pr::physics::ArticulationHandle articulation, pr::physics::ArticulationState const* state, float const* positions, float const* velocities, float const* forces, std::uint32_t scalar_count);
	PHYSICS_API pr::physics::EStatus __stdcall Physics_ArticulationLinksCopy(pr::physics::EngineHandle engine, pr::physics::ArticulationHandle articulation, pr::physics::ArticulationLinkState* links, std::uint32_t capacity, std::uint32_t* required);
	PHYSICS_API pr::physics::EStatus __stdcall Physics_ArticulationLinkForceSet(pr::physics::EngineHandle engine, pr::physics::ArticulationHandle articulation, std::uint32_t link_index, pr::physics::SpatialVector const* force);
	PHYSICS_API pr::physics::EStatus __stdcall Physics_ArticulationLinkForceApply(pr::physics::EngineHandle engine, pr::physics::ArticulationHandle articulation, std::uint32_t link_index, pr::physics::SpatialVector const* force);
	PHYSICS_API pr::physics::EStatus __stdcall Physics_ArticulationLinkGravitySet(pr::physics::EngineHandle engine, pr::physics::ArticulationHandle articulation, std::uint32_t link_index, pr::physics::Vector4 const* gravity);